fixed github link

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -1,6 +1,6 @@
 {% extends template.self %}
 
 {% block page %}
-	<a href="https://github.com/matiseams/docstest/{{file.path}}">edit this documentation</a>
+	<a href="https://github.com/matiseams/docstest/blob/master/{{file.path}}">edit this documentation</a>
 	{{ super() }}    
 {% endblock %}
